--- a/yihua-app/package.json
+++ b/yihua-app/package.json
@@ -14,7 +14,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "deploy": "cd dist; aws s3 sync --profile yihua --acl public-read --exclude .DS_Store . s3://yihua.app"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
