--- a/yihua-app/package.json
+++ b/yihua-app/package.json
@@ -5,12 +5,15 @@
   "author": "Yi-Hua Liang <yihua1218@gmail.com>",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@nuxtjs/pwa": "latest",
+    "bootstrap-social": "^5.1.1",
     "bootstrap-vue": "^2.0.0-rc.11",
     "coffee-loader": "^0.9.0",
     "coffeescript": "^2.3.1",
     "node-sass": "^4.9.0",
     "nuxt": "latest",
+    "nuxt-fontawesome": "^0.2.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "sass-loader": "^7.0.1"
