--- a/yihua-app/package.json
+++ b/yihua-app/package.json
@@ -11,9 +11,12 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "coffee-loader": "^0.9.0",
     "coffeescript": "^2.3.1",
+    "jquery": "^3.3.1",
     "node-sass": "^4.9.0",
     "nuxt": "latest",
     "nuxt-fontawesome": "^0.2.0",
+    "postcss": "^6.0.22",
+    "postcss-loader": "^2.1.5",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "sass-loader": "^7.0.1"
