--- a/yihua-app/package.json
+++ b/yihua-app/package.json
@@ -1,48 +1,32 @@
 {
   "name": "yihua-app",
   "version": "1.0.0",
-  "description": "Yi-Hua's App for personal life.",
-  "author": "Yi-Hua Liang <yihua1218@gmail.com>",
+  "description": "YiHua.App",
+  "author": "Yi-Hua Liang",
   "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@nuxtjs/pwa": "latest",
-    "bootstrap-social": "^5.1.1",
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "coffee-loader": "^0.9.0",
-    "coffeescript": "^2.3.1",
-    "jquery": "^3.3.1",
-    "node-sass": "^4.9.0",
-    "nuxt": "latest",
-    "nuxt-fontawesome": "^0.2.0",
-    "postcss": "^6.0.22",
-    "postcss-loader": "^2.1.5",
-    "pug": "^2.0.3",
-    "pug-loader": "^2.4.0",
-    "sass-loader": "^7.0.1"
-  },
   "scripts": {
-    "dev": "nuxt",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint",
-    "deploy": "cd dist; aws s3 sync --profile yihua --acl public-read --exclude .DS_Store . s3://yihua.app"
+    "precommit": "npm run lint"
+  },
+  "dependencies": {
+    "nuxt": "^1.0.0",
+    "feathers": "^2.0.3",
+    "feathers-configuration": "^0.3.3",
+    "vuetify": "^1.0.19",
+    "@nuxtjs/axios": "^5.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
-    "eslint": "^3.15.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-html": "^2.0.0",
-    "eslint-plugin-promise": "^3.4.1",
-    "eslint-plugin-standard": "^2.0.1"
-  },
-  "config": {
-    "nuxt": {
-      "host": "0.0.0.0",
-      "port": "3015"
-    }
+    "cross-env": "^5.0.1",
+    "babel-eslint": "^8.2.1",
+    "eslint": "^5.0.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-vue": "^4.0.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "nodemon": "^1.11.0"
   }
 }
